# topas-releases

./: README.md
GitHubWorkflows/BuildDockerImageOnCommit/: cmake.yml
topas_3_10/debian9/: CMakeLists.txt  README.txt  get_geant4_data.sh  get_geant4_data_and_run_topas.sh
topas_3_10/debian9/cmake/Modules/: TOPAS_BuildSettings.cmake
topas_3_10/debian9/examples/MVLinac/: Field.txt  Jaws.txt  MLC.txt  MainTxHead.txt  TestComponent.txt
topas_3_10/debian9/examples/Outcome/: DoseAtOAR2Saved.binheader  DoseAtTargetSaved.binheader
topas_3_10/debian9/extensions/: TsExtensionManager.cc.in  TsExtensionManager.hh.in
topas_3_10/debian9/include/: TsParameterManager.hh  TsTopasConfig.hh  TsVBinnedScorer.hh  TsVNtupleScorer.hh  TsVScorer.hh
topas_3_10/debian9/lib/: libG4ptl.so.0  libG4ptl.so.0.0.2  libQt5DBus.so.5  libQt5OpenGL.so.5  libQt5PrintSupport.so.5  libQt5XcbQpa.so.5  libX11-xcb.so.1  libXau.so.6  libXdamage.so.1  libXfixes.so.3  libXmu.so.6  libXt.so.6  libavahi-client.so.3  libavahi-common.so.3  libbsd.so.0  libcups.so.2  libdbus-1.so.3  libdouble-conversion.so.1  libgbm.so.1  libgcrypt.so.20  libgdcmCommon.so.2.6  libgdcmCommon.so.2.6.8  libgdcmDICT.so.2.6  libgdcmDICT.so.2.6.8  libgdcmDSED.so.2.6.8  libgdcmIOD.so.2.6  libgdcmIOD.so.2.6.8  libgdcmMSFF.so.2.6.8  libgdcmcharls.so.2.6  libgdcmcharls.so.2.6.8  libgdcmexpat.so.2.0  libgdcmexpat.so.2.0.0  libgdcmjpeg16.so.2.6  libgdcmjpeg16.so.2.6.8  libgdcmjpeg8.so.2.6  libgdcmopenjpeg.so.1.4  libgdcmuuid.so.2.6  libgdcmuuid.so.2.6.8  libgdcmzlib.so.2.6.8  libgmp.so.10  (+33 more)
topas_3_9/Frameworks/: libG4FR.dylib  libG4GMocren.dylib  libG4OpenGL.dylib  libG4RayTracer.dylib  libG4Tree.dylib  libG4VRML.dylib  libG4clhep.dylib  libG4digits_hits.dylib  libG4error_propagation.dylib  libG4event.dylib  libG4geometry.dylib  libG4gl2ps.dylib  libG4global.dylib  libG4graphics_reps.dylib  libG4intercoms.dylib  libG4interfaces.dylib  libG4materials.dylib  libG4modeling.dylib  libG4parmodels.dylib  libG4particles.dylib  libG4persistency.dylib  libG4physicslists.dylib  libG4ptl.0.0.2.dylib  libG4readout.dylib  libG4run.dylib  libG4tasking.dylib  libG4track.dylib  libG4tracking.dylib  libG4visHepRep.dylib  libG4visQt3D.dylib  libG4visXXX.dylib  libG4vis_management.dylib  libG4zlib.dylib  libgdcmCommon.dylib  libgdcmDICT.2.6.dylib  libgdcmDSED.2.6.dylib  libgdcmIOD.2.6.8.dylib  libgdcmcharls.dylib  libgdcmexpat.2.0.0.dylib  libgdcmjpeg12.2.6.8.dylib  (+5 more)
topas_3_9/Frameworks/Qt3DCore.framework/: Qt3DCore
topas_3_9/Frameworks/Qt3DRender.framework/: Qt3DRender
topas_3_9/Frameworks/QtNetwork.framework/: QtNetwork
topas_3_9/Frameworks/styles/: libqmacstyle.dylib
topas_3_9/debian9/: CMakeHandleExtensions.cmake  CMakeLists.txt  Dockerfile  README.txt  get_geant4_data.sh  get_geant4_data_and_run_topas.sh
(+205 files in other folders)
